[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datetime>=6.0",
    "duckdb>=1.4.3",
    "httpx>=0.28.1",
    "marimo>=0.19.4",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "requests>=2.32.5",
]
